ログイン画面実装

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/header" %>
+
 <div class="user-contents">
   <h2>ようこそ！新規登録をしよう！</h2>
 
@@ -21,9 +23,7 @@
 
     <div class="field">
       <%= f.label :"パスワード" %>
-      <% if @minimum_password_length %>
       <em>(8 characters minimum)</em>
-      <% end %><br />
       <%= f.password_field :password, autocomplete: "new-password" %>
     </div>
 
@@ -56,7 +56,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "新規登録" %>
+      <%= f.submit "Sign in" %>
     </div>
   <% end %>
 
