--- a/app/views/money/_form.html.erb
+++ b/app/views/money/_form.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/header" %>
+
 <%= form_with(model: money, local: true) do |form| %>
   <% if money.errors.any? %>
     <div id="error_explanation">
@@ -17,23 +19,26 @@
   </div>
 
   <div class="field">
-    <%= form.label :day %>
-    <%= form.text_field :day %>
+    <label class="form-text">生年月日</label>
+    <span class="indispensable">必須</span>
+  </div>
+  <div class='input-birth-wrap'>
+    <%= raw sprintf(
+      form.date_select(
+      :day,
+      class:'select-birth',
+      id:"birth-date",
+      use_month_numbers: true,
+      prompt:'--',
+      start_year: 1930,
+      end_year: (Time.now.year - 5),
+      date_separator: '%s'),
+      "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
   </div>
 
   <div class="field">
     <%= form.label :text %>
     <%= form.text_field :text %>
-  </div>
-
-  <div class="field">
-    <%= form.label :goal %>
-    <%= form.text_field :goal %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user %>
-    <%= form.text_field :user %>
   </div>
 
   <div class="actions">
