--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -2,7 +2,38 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Money</h1>
+<%= link_to '目標設定', new_goal_path %>
+
+<h1>目標</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Saving Goal</th>
+      <th>Weight Goal</th>
+      <th>Period</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @goal.each do |goal| %>
+      <tr>
+        <td><%= goal.saving_goal %></td>
+        <td><%= goal.weight_goal %></td>
+        <td><%= goal.period %></td>
+
+        <td><%= goal.user %></td>
+        <td><%= link_to 'Show', goal %></td>
+        <td><%= link_to 'Edit', edit_money_path(goal) %></td>
+        <td><%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+
+<h1>今までの合計金額</h1>
 
 <table>
   <thead>
@@ -22,7 +53,9 @@
         <td><%= money.saving_amount %></td>
         <td><%= money.day %></td>
         <td><%= money.text %></td>
-        <td><%= money.goal %></td>
+
+        <%# <><%= money.goal %>
+
         <td><%= money.user %></td>
         <td><%= link_to 'Show', money %></td>
         <td><%= link_to 'Edit', edit_money_path(money) %></td>
@@ -34,4 +67,5 @@
 
 <br>
 
-<%= link_to 'New Money', new_money_path %>
+<%= link_to '今日の記録', new_money_path %>
+
