--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -1,4 +1,4 @@
-.header1 {
+/* .header1 {
   box-sizing: border-box;
   width: 100%;
 }
@@ -60,4 +60,4 @@
   .header-post {
     display: none;
   }
-}
+} */
