--- a/app/assets/stylesheets/user/registrations.css
+++ b/app/assets/stylesheets/user/registrations.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     font-size:100%;
     margin: 0;
     padding: 0;
@@ -98,4 +98,4 @@ h6 {
 .google {
   background:#db4a39;
   box-shadow:0px 3px 0px #b93f31;
-}
+} */
