--- a/app/views/money/_form.html.erb
+++ b/app/views/money/_form.html.erb
@@ -1,12 +1,10 @@
-<%= render "shared/header" %>
-
-<%= form_with(model: money, local: true) do |form| %>
-  <% if money.errors.any? %>
+<%= form_with(model: money_body, url: money_index_path, method: :post, local: true) do |form| %>
+  <% if money_body.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(money.errors.count, "error") %> prohibited this money from being saved:</h2>
+      <h2><%= pluralize(money_body.errors.count, "error") %> prohibited this money from being saved:</h2>
 
       <ul>
-        <% money.errors.full_messages.each do |message| %>
+        <% money_body.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
@@ -16,6 +14,11 @@
   <div class="field">
     <%= form.label :saving_amount %>
     <%= form.text_field :saving_amount %>
+  </div>
+
+    <div class="field">
+    <%= form.label :weight %>
+    <%= form.text_field :weight %>
   </div>
 
   <div class="field">
@@ -30,8 +33,8 @@
       id:"birth-date",
       use_month_numbers: true,
       prompt:'--',
-      start_year: 1930,
-      end_year: (Time.now.year - 5),
+      start_year: Time.now.year,
+      end_year: (Time.now.year + 5),
       date_separator: '%s'),
       "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
   </div>
