--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -11,6 +11,15 @@
       a, a:visited, a:focus, a:hover {
         text-decoration: none;
       }
+      /* 写真の導入 */
+      /* .jumbotron { 
+        background:url(github.png) center no-repeat; background-size: cover;
+      } */
+
+      /* Chart.js */
+      @-webkit-keyframes chartjs-render-animation {
+        from{opacity:0.99}to{opacity:1}}@keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}.chartjs-render-monitor{-webkit-animation:chartjs-render-animation 0.001s;animation:chartjs-render-animation 0.001s;
+      }
     </style>
   </head>
   <body >
@@ -20,8 +29,8 @@
   </div>
 </a>
 
-<%# ヘッダー %>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+<%# header %>
+    <nav class="navbar navbar-dark fixed-top bg-secondary flex-md-nowrap p-2 shadow">
   <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">食べたつもり貯金</a>
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
@@ -30,15 +39,16 @@
   </ul>
 </nav>
 
-<%# サイドバー %>
+
 <div class="container-fluid">
   <div class="row">
+  <%# sidebar %>
     <nav class="col-md-2 d-none d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
           <%# 映らない %>
-            <a class="nav-link active" href="#">
+            <a class="nav-link active p-4" href="#">
               <span data-feather="home"></span>
               <span class="sr-only">映らない</span>
             </a>
@@ -50,13 +60,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/money/money[:id]">
+            <a class="nav-link" href="/money/show">
               <span data-feather="shopping-cart"></span>
               貯金記録
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/bodies/show">
               <span data-feather="bar-chart-2"></span>
               体重記録
             </a>
@@ -77,61 +87,59 @@
       </div>
     </nav>
 
-<%# メインコンテンツ %>
+<%# main-content %>
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
     <%# 映らない %>
-    <a class="nav-link active" href="#">
+    <a class="nav-link active p-4" href="#">
       <span data-feather="home"></span>
       <span class="sr-only">映らない</span>
     </a>
 
     <% unless @goal.present? %> 
-      <%= link_to 'まずは目標を設定しよう', new_goal_path, class: "h1" %>
-      <img src="app/assets/images/goal_index.jpg" class="rounded mx-auto d-block" alt="Responsive image">
+      <%= link_to '目標を設定しよう', new_goal_path, class: "h1" %>
+      <%# 写真 %>
+      <%# <img src="app/assets/images/goal_index.jpg" class="rounded mx-auto d-block" alt="Responsive image"> %>
     <% end %> 
 
     <% if @goal.present? %>
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-      <h1 class="h2">貯金金額</h1>
-      <div class="btn-toolbar mb-2 mb-md-0">
-        <div class="btn-group mr-2">
-          <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Share</button> -->
-          <button type="button" class="btn btn-sm btn-outline-secondary">共有</button>
-          <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Export</button> -->
-          <button type="button" class="btn btn-sm btn-outline-secondary">出力</button>
+    <% @goal.each do |goal| %>
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="h2">目標</h1>
+        <h2 class="text-info"><%= goal.purpose %></h2>
+        <div class="btn-toolbar mb-2 mb-md-0">
+          <div>
+            <%= link_to '変更する', goal_path(goal.id), class: "btn" %>
+          </div>
         </div>
-        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-          <span data-feather="calendar"></span>
-          <!-- This week -->
-          今週
-        </button>
       </div>
-    </div>
 
-    <h1>目標</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>貯金金額目標</th>
-          <th>目標体重</th>
-          <th>いつまで</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
+      <section class="text-center text-muted">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-5 mb-5 mb-md-0">
+              <div class="stat">
+                <h3><%= goal.period %></h3>
+                <p>いつまで</p>
+              </div>
+						</div>
+            <div class="col-sm-3 mb-5 mb-md-0">
+              <div class="stat">
+                <h3><%= goal.saving_goal %><b>円</b></h3>
+                <p>貯金金額</p>
+              </div>
+						</div>
+            <div class="col-sm-3">
+              <div class="stat">
+                <h3><%= goal.weight_goal %><b>kg</b></h3>
+                <p>体重</p>
+              </div>
+            </div>
+					</div>
+				</div>
+			</section>
 
-      <tbody>
-        <% @goal.each do |goal| %>
-          <tr>
-            <td><%= goal.saving_goal %></td>
-            <td><%= goal.weight_goal %></td>
-            <td><%= goal.period %></td>
-          </tr>
-          <%= link_to '目標を変更する', goal_path(goal.id), class: "h3" %>
-        <% end %>
-      </tbody>
-    </table>
-
-    <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+    <% end %>
     <% end %>
     </main>
   </div>
