--- a/app/views/money/new.html.erb
+++ b/app/views/money/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Money</h1>
 
-<%= render 'form', money: @money %>
+<%= render 'form', money_body: @money_body %>
 
-<%= link_to 'Back', money_index_path %>
+<%= link_to 'Back', root_path %>
