--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -24,20 +24,13 @@
   </head>
   <body >
     <a id="skippy" class="sr-only sr-only-focusable" href="#content">
-  <div class="container">
-    <span class="skiplink-text">Skip to main content</span>
-  </div>
-</a>
+      <div class="container">
+      <span class="skiplink-text">Skip to main content</span>
+      </div>
+    </a>
 
 <%# header %>
-    <nav class="navbar navbar-dark fixed-top bg-secondary flex-md-nowrap p-2 shadow">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">食べたつもり貯金</a>
-  <ul class="navbar-nav px-3">
-    <li class="nav-item text-nowrap">
-      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link" %>
-    </li>
-  </ul>
-</nav>
+    <%= render 'shared/header' %>
 
 
 <div class="container-fluid">
