--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,21 +1,8 @@
-<%# css assets/stylesheets/shared/header.css %>
-<header class="header1">
-  <div class="header-inner">
-    <div class="header-left">
-      <div class="logo">
-        <a class="logo-name" href="/">食べたつもり貯金</a>
-      </div>
-    </div>
-    <div class="header-right">
-      <ul class='header-nav-item'>
-        <% if user_signed_in? %>
-          <li><%= link_to current_user.nickname, class: "header-button header-login" %></li>
-          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "header-button header-post" %></li>
-        <% else %>
-          <li><%= link_to 'ログイン', new_user_session_path, class: "header-button header-login" %></li>
-          <li><%= link_to '新規登録', new_user_registration_path, class: "header-button header-post" %></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</header>
+<nav class="navbar navbar-dark fixed-top bg-secondary flex-md-nowrap p-2 shadow">
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">食べたつもり貯金</a>
+  <ul class="navbar-nav px-3">
+    <li class="nav-item text-nowrap">
+      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link" %>
+    </li>
+  </ul>
+</nav>
