貯金金額詳細ページの実装

--- a/app/views/money/_form.html.erb
+++ b/app/views/money/_form.html.erb
@@ -45,6 +45,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit data: { confirm: '変更できません。よろしいですか?' } %>
   </div>
 <% end %>
