--- a/app/views/money/show.html.erb
+++ b/app/views/money/show.html.erb
@@ -1,167 +1,46 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
 
-<%# トップページから持ってきた %>
-        <h1>今までの合計金額</h1>
+  <div class="row">
+    <%= render 'shared/header' %>
+  </div>
 
-        <table>
-          <thead>
-            <tr>
-              <th>Saving amount</th>
-              <th>Day</th>
-              <th>Text</th>
-              <th>Goal</th>
-              <th>User</th>
-              <th colspan="3"></th>
-            </tr>
-          </thead>
+<%# 映らない %>
+  <a class="nav-link active p-4" href="#">
+    <span data-feather="home"></span>
+    <span class="sr-only">映らない</span>
+  </a>
 
-          <tbody>
-            <% @money.each do |money| %>
-              <tr>
-                <td><%= money.saving_amount %></td>
-                <td><%= money.day %></td>
-                <td><%= money.text %></td>
+  <div class="row">
+    <h1 class="mt-3 text-center">今までの貯金金額一覧</h1>
+  </div>
 
-                <%# <><%= money.goal %>
-
-                <td><%= money.user %></td>
-                <td><%= link_to 'Show', money %></td>
-                <td><%= link_to 'Edit', edit_money_path(money) %></td>
-                <td><%= link_to 'Destroy', money, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-
-      <h2>体重記録</h2>
-      <div class="table-responsive">
-        <table class="table table-striped table-sm">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1,001</td>
-              <td>Lorem</td>
-              <td>ipsum</td>
-              <td>dolor</td>
-              <td>sit</td>
-            </tr>
-            <tr>
-              <td>1,002</td>
-              <td>amet</td>
-              <td>consectetur</td>
-              <td>adipiscing</td>
-              <td>elit</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>Integer</td>
-              <td>nec</td>
-              <td>odio</td>
-              <td>Praesent</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>libero</td>
-              <td>Sed</td>
-              <td>cursus</td>
-              <td>ante</td>
-            </tr>
-            <tr>
-              <td>1,004</td>
-              <td>dapibus</td>
-              <td>diam</td>
-              <td>Sed</td>
-              <td>nisi</td>
-            </tr>
-            <tr>
-              <td>1,005</td>
-              <td>Nulla</td>
-              <td>quis</td>
-              <td>sem</td>
-              <td>at</td>
-            </tr>
-            <tr>
-              <td>1,006</td>
-              <td>nibh</td>
-              <td>elementum</td>
-              <td>imperdiet</td>
-              <td>Duis</td>
-            </tr>
-            <tr>
-              <td>1,007</td>
-              <td>sagittis</td>
-              <td>ipsum</td>
-              <td>Praesent</td>
-              <td>mauris</td>
-            </tr>
-            <tr>
-              <td>1,008</td>
-              <td>Fusce</td>
-              <td>nec</td>
-              <td>tellus</td>
-              <td>sed</td>
-            </tr>
-            <tr>
-              <td>1,009</td>
-              <td>augue</td>
-              <td>semper</td>
-              <td>porta</td>
-              <td>Mauris</td>
-            </tr>
-            <tr>
-              <td>1,010</td>
-              <td>massa</td>
-              <td>Vestibulum</td>
-              <td>lacinia</td>
-              <td>arcu</td>
-            </tr>
-            <tr>
-              <td>1,011</td>
-              <td>eget</td>
-              <td>nulla</td>
-              <td>Class</td>
-              <td>aptent</td>
-            </tr>
-            <tr>
-              <td>1,012</td>
-              <td>taciti</td>
-              <td>sociosqu</td>
-              <td>ad</td>
-              <td>litora</td>
-            </tr>
-            <tr>
-              <td>1,013</td>
-              <td>torquent</td>
-              <td>per</td>
-              <td>conubia</td>
-              <td>nostra</td>
-            </tr>
-            <tr>
-              <td>1,014</td>
-              <td>per</td>
-              <td>inceptos</td>
-              <td>himenaeos</td>
-              <td>Curabitur</td>
-            </tr>
-            <tr>
-              <td>1,015</td>
-              <td>sodales</td>
-              <td>ligula</td>
-              <td>in</td>
-              <td>libero</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-<%= link_to 'Edit', edit_money_path(@money) %> |
-<%= link_to 'Back', money_index_path %>
+  <div class="row">
+    <div class="col-10 d-block mx-auto">
+      <table class="table table-hover">
+        <thead class="bg-light">
+          <tr>
+            <th scope="col">DAY</th>
+            <th scope="col">金額</th>
+            <th scope="col">一言</th>
+            <th scope="col">削除</th>
+          </tr>
+        </thead>
+        <% @money.each do |money| %>
+        <tbody>
+          <tr scope="row">
+            <td><%= money.day %></td>
+            <td><%= money.saving_amount %></td>
+            <td><%= money.text %></td>
+            <td><%= link_to money_path, method: :delete, data: { confirm: '削除しますか?' } do %>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+              <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+              <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+              </svg>
+            <% end %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
