formオブジェクトviewの実装

--- a/app/views/goals/_goalform.html.erb
+++ b/app/views/goals/_goalform.html.erb
@@ -35,7 +35,7 @@
                       <%= goal.text_field :purpose, class:"form-control", placeholder:"カバンを買う" %>
                     </div>
                     <div class="container">
-                      <%= goal.submit '決定', class:"btn btn-primary btn-lg btn-block" %>
+                      <%= goal.submit '決定', class:"btn btn-primary btn-lg rounded-pill" %>
                     </div>
                 </form>
             </div>
