--- a/app/views/money/_form.html.erb
+++ b/app/views/money/_form.html.erb
@@ -1,32 +1,42 @@
-<%= form_with(model: money_body, url: money_index_path, method: :post, local: true) do |form| %>
-  <% if money_body.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(money_body.errors.count, "error") %> prohibited this money from being saved:</h2>
-
-      <ul>
-        <% money_body.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+<div class="border col-7 container">
+  <br>
+  <h2>記録</h2>
+  <br>
+  <%= form_with(model: money_body, url: money_index_path, method: :post, local: true) do |form| %>
+    <div class="row align-items-center justify-content-center">
+      <div class="col-mdd-flex">
+        <% if money_body.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(money_body.errors.count, "error") %> prohibited this money from being saved:</h2>
+            <ul>
+              <% money_body.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
-      </ul>
+        <form>
+          <div class="form-group">
+            <%= form.label :貯金金額 %>
+            <%= form.text_field :saving_amount, class:"form-control", placeholder:"500" %>
+          </div>
+          <div class="form-group">
+            <%= form.label :体重 %>
+            <%= form.text_field :weight, class:"form-control", placeholder:"50" %>
+          </div>
+          <div class="form-group">
+              <label>生年月日</label>
+              <span>必須</span>
+          </div>
+          <div class="form-group">
+            <%= form.label :目的 %>
+            <%= form.text_field :text, class:"form-control", placeholder:"我慢できた" %>
+          </div>
+          <div class="container">
+            <%= form.submit '決定', data: { confirm: '変更できません。よろしいですか?' }, class:"btn btn-primary btn-lg rounded-pill" %>
+          </div>
+        </form>
+      </div>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :saving_amount %>
-    <%= form.text_field :saving_amount %>
-  </div>
-
-    <div class="field">
-    <%= form.label :weight %>
-    <%= form.text_field :weight %>
-  </div>
-
-  <div class="field">
-    <%= form.label :text %>
-    <%= form.text_field :text %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit data: { confirm: '変更できません。よろしいですか?' } %>
-  </div>
-<% end %>
+</div>
