--- a/app/views/money/edit.html.erb
+++ b/app/views/money/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', money: @money %>
 
-<%= link_to 'Show', @money %> |
+<%= link_to 'Show', @money %>
 <%= link_to 'Back', money_index_path %>
