LPページ実装

--- a/app/views/money/edit.html.erb
+++ b/app/views/money/edit.html.erb
@@ -1,6 +1,2 @@
+<%= render 'shared/header' %>
 <h1>Editing Money</h1>
-
-<%= render 'form', money: @money %>
-
-<%= link_to 'Show', @money %>
-<%= link_to 'Back', money_index_path %>
