--- a/app/views/money/new.html.erb
+++ b/app/views/money/new.html.erb
@@ -5,5 +5,5 @@
 
   <%= render 'form', money_body: @money_body %>
 
-  <%= link_to 'back', root_path, class:"btn btn-secondary btn-lg rounded-pill float-right" %>
+  <%= link_to 'back', money_index_path, class:"btn btn-secondary btn-lg rounded-pill float-right" %>
 </body>
