--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,24 +1,13 @@
-<div class="container">
-  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-md-between py-3">
+    <a href="/money" class="navbar-brand">食べたつもり貯金</a>
 
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="/money" class="nav-link px-2 link-secondary">食べたつもり貯金</a></li>
-    </ul>
-
-    <div class="col-md-3 text-end">
-      <button type="button" class="btn btn-outline-primary me-2">Login</button>
-      <button type="button" class="btn btn-primary">Sign-up</button>
-      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-outline-primary me-2" %>
+    <div class='d-flex flex-row'>
+      <% if user_signed_in? %>
+        <%= link_to current_user.given_name, "#", class: "btn btn-outline-success me-2" %>
+        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-success" %>
+      <% else %>
+        <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success me-2" %>
+        <%= link_to '新規登録', new_user_registration_path, class: "btn btn-success" %>
+      <% end %>
     </div>
-  </header>
-
-  <%# <nav class="navbar navbar-dark fixed-top bg-secondary flex-md-nowrap p-2 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/money">食べたつもり貯金</a>
-    <ul class="navbar-nav px-3">
-      <li class="nav-item text-nowrap">
-        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav-link" %>
-      <%# </li>
-    </ul>
-  </nav> %> 
-
-</div>
+</nav>
