--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,36 +1,31 @@
-<body>
+<%= render 'shared/header' %>
+<br>
+<br>
+<div class="border col-7 container">
   <br>
-  <%= render 'shared/header' %>
+  <h2 class="p-3 text-success">ユーザー情報</h2>
   <br>
-  <br>
-  <div class="border col-7 container">
-    <br>
-    <h2>ユーザー管理</h2>
-    <br>
-    <%= form_with(url: user_registration_path(current_user.id), local: true) do |f| %>
-
-      <div class="row align-items-center justify-content-center">
-        <div class="col-mdd-flex">
-          <form>
-            <div class="form-group">
-              <%= f.label :メールアドレス %>
-              <%= f.email_field :email, class:"form-control" %>
-            </div>
-            <div class="form-group">
-              <%= f.label :新しいパスワード %> <i>(<%= @minimum_password_length %> characters minimuｍ)</i><br />
-              <%= f.password_field :password, class:"form-control" %>
-            </div>
-            <div class="form-group">
-              <%= f.label :確認用にパスワードをもう一度入力してください %><br />
-              <%= f.password_field :password_confirmation, class:"form-control"%>
-            </div>
-            <div class="container">
-              <%= f.submit "決定", class:"btn btn-primary btn-lg rounded-pill" %>
-            </div>
-          </form>
+  <% @user.each do |user| %>
+    <div class="row align-items-center justify-content-center">
+      <div class="flex-column">
+        <div class="col-sm-5 mb-5 mb-md-0">
+          <p>名前</p>
+          <h3><%= user.family_name %></h3>
+          <h3><%= user.given_name %></h3>
+        </div>
+        <div class="col-sm-5 mb-5 mb-md-0">
+          <p>メールアドレス</p>
+          <h3><%= user.email %></h3>
+        </div>
+        <div class="col-sm-5 mb-5 mb-md-0">
+          <p>体重</p>
+          <h3><%= user.birth_day %></h3>
+        </div>
+        <div class="col-sm-5 mb-5 mb-md-0">
+          <p>いつから始めたのか</p>
+          <h3><%= user.created_at.strftime('%Y/%m/%d') %></h3>
         </div>
       </div>
-    <% end %>
-    <%# <%= link_to "削除", user_registration_path(@user.id), method: :delete, class:"btn btn-primary btn-lg rounded-pill float-right"%> %>
-  </div>
-</body>
+    </div>
+  <% end %>
+</div>
