--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -60,7 +60,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/users/edit">
               <span data-feather="users"></span>
-              ユーザー管理
+              ユーザー情報
             </a>
           </li>
           <li class="nav-item">
