--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <br>
-  <h1 class="mx-auto" style="width: 400px;">目標を設定しよう</h1>
-  <br>
+
+  <%# header %>
+  <%= render 'shared/header' %>
 
   <%= render "goalform" %>
 
