--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,16 +24,20 @@
           <%= f.email_field :email, class:"form-control", placeholder:"aaa@gmail.com" %>
         </div>
 
-        <div class="form-group">
-          <%= f.label :"パスワード" %>
-          <em>(8 characters minimum)</em>
-          <%= f.password_field :password, class:"form-control" %>
-        </div>
+        <%if @sns_id.present? %>
+          <%= hidden_field_tag :sns_auth, true %>
+        <% else %>
+          <div class="form-group">
+            <%= f.label :"パスワード" %>
+            <em>(8 characters minimum)</em>
+            <%= f.password_field :password, class:"form-control" %>
+          </div>
 
-        <div class="form-group">
-          <%= f.label :"確認のためにもう一度パスワードを入力してください" %><br />
-          <%= f.password_field :password_confirmation, class:"form-control" %>
-        </div>
+          <div class="form-group">
+            <%= f.label :"確認のためにもう一度パスワードを入力してください" %><br />
+            <%= f.password_field :password_confirmation, class:"form-control" %>
+          </div>
+        <% end %>
 
         <div class="form-group">
           <%= f.label :"ニックネーム" %><br />
@@ -64,4 +68,6 @@
       </div>
     </div>
   <% end %>
+  <%= link_to "Facebookで登録", user_facebook_omniauth_authorize_path, method: :post%>
+  <%= link_to "Googleで登録", user_google_oauth2_omniauth_authorize_path, method: :post%>
 </div>
