toppageのクラス修正

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-md-between py-3">
-    <a href="/money" class="navbar-brand">食べたつもり貯金</a>
+<nav class="navbar navbar-expand-lg navbar-light justify-content-md-between py-3 shadow">
+    <a href="/money" class="navbar-brand fs-3">食べたつもり貯金</a>
 
     <div class='d-flex flex-row'>
       <% if user_signed_in? %>
