--- a/app/views/money/index.html.erb
+++ b/app/views/money/index.html.erb
@@ -20,157 +20,152 @@
       @-webkit-keyframes chartjs-render-animation {
         from{opacity:0.99}to{opacity:1}}@keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}.chartjs-render-monitor{-webkit-animation:chartjs-render-animation 0.001s;animation:chartjs-render-animation 0.001s;
       }
+
+      /* sidebar */
+      .nav-link {
+        color: black;
+      }
+      .nav-link:hover {
+        color: #F9C80E;
+      }
+
+      /* main */
+      main {
+        background-color: whitesmoke;
+      }
     </style>
   </head>
-  <body >
-    <a id="skippy" class="sr-only sr-only-focusable" href="#content">
-      <div class="container">
-      <span class="skiplink-text">Skip to main content</span>
-      </div>
-    </a>
+  <body class="h-100">
 
-<%# header %>
+    <%# header %>
     <%= render 'shared/header' %>
 
-
-<div class="container-fluid">
-  <div class="row">
-  <%# sidebar %>
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-      <div class="sidebar-sticky">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" href="/money/new">
-              <span data-feather="plus-circle"></span>
-              今日の記録
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/money/show">
-              <span data-feather="shopping-cart"></span>
-              貯金記録
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/bodies/show">
-              <span data-feather="bar-chart-2"></span>
-              体重記録
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/users/edit">
-              <span data-feather="users"></span>
-              ユーザー情報
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/money">
-              <span data-feather="file"></span>
-              トップページへ戻る
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-<%# main-content %>
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-    <% unless @goal.present? %> 
-      <%= link_to '目標を設定しよう', new_goal_path, class: "h1" %>
-      <%# 写真 %>
-      <%# <img src="app/assets/images/goal_index.jpg" class="rounded mx-auto d-block" alt="Responsive image"> %>
-    <% end %> 
-
-    <% if @goal.present? %>
-    <% @goal.each do |goal| %>
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">目標</h1>
-        <h2 class="text-info"><%= goal.purpose %></h2>
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <div>
-            <%= link_to '変更する', goal_path(goal.id), class: "btn" %>
+    <div class="container-fluid">
+      <div class="row">
+        <%# sidebar %>
+        <aside class="main-sidebar col-12 col-md-3 col-lg-2 px-0 border-end">
+          <div class="nav-wrapper">
+            <ul class="nav flex-column">
+              <li class="nav-item border-bottom py-3">
+                <a class="nav-link" href="/money/new">
+                  <span data-feather="plus-circle"></span>
+                  Today's Record
+                </a>
+              </li>
+              <li class="nav-item border-bottom py-3">
+                <a class="nav-link" href="/money/show">
+                  <span data-feather="dollar-sign"></span>
+                  Money Record
+                </a>
+              </li>
+              <li class="nav-item border-bottom py-3">
+                <a class="nav-link" href="/bodies/show">
+                  <span data-feather="bar-chart-2"></span>
+                  Weight Record
+                </a>
+              </li>
+              <li class="nav-item border-bottom py-3">
+                <a class="nav-link" href="/users/edit">
+                  <span data-feather="users"></span>
+                  User Profile
+                </a>
+              </li>
+              <li class="nav-item border-bottom py-3">
+                <a class="nav-link" href="/money">
+                  <span data-feather="home"></span>
+                  Top Page
+                </a>
+              </li>
+            </ul>
           </div>
-        </div>
-      </div>
+        </aside>
 
-      <section class="text-center text-muted">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-5 mb-5 mb-md-0">
-              <div class="stat">
-                <h3><%= goal.period %></h3>
-                <p>いつまで</p>
-              </div>
-						</div>
-            <div class="col-sm-3 mb-5 mb-md-0">
-              <div class="stat">
-                <h3><%= goal.saving_goal %><b>円</b></h3>
-                <p>貯金金額</p>
-              </div>
-						</div>
-            <div class="col-sm-3">
-              <div class="stat">
-                <h3><%= goal.weight_goal %><b>kg</b></h3>
-                <p>体重</p>
+        <%# main-content %>
+        <main class="main-content col-lg-10 col-md-9 col-sm-12 p-0">
+          <div class="main-content-container container-fluid px-4">
+            <div class="page-header row no-gutters py-4">
+              <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
+                <h3 class="page-title">TOPPAGE</h3>
               </div>
             </div>
-					</div>
-				</div>
-			</section>
+            <% unless @goal.present? %> 
+              <div class="row">
+                <div class="card card-small mb-4 pt-3 text-center">
+                  <div class="md-8">
+                    <%= image_tag "goal_index.jpg", class:"rounded-circle", width:"250" %>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="card-title md-0">目標を設定しよう！</h4>
+                    <p class="card-text text-muted d-block mb-2">いつまでに達成するのかなど具体的な目標を立てよう</p>
+                    <%= link_to 'START', new_goal_path, class: "mb-2 btn btn-lg btn-pill btn-outline-success mr-2" %>
+                  </div>
+                </div>
+              </div>
+            <% end %> 
 
-      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-    <% end %>
-    <% end %>
-    </main>
-  </div>
-</div>
+            <% if @goal.present? %>
+            <% @goal.each do |goal| %>
+              <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2">Goal</h1>
+                <h2 class="text-info"><%= goal.period %></h2>
+                <p>までに</p>
+                <h2 class="text-info"><%= goal.purpose %></h2>
+                <div class="btn-toolbar mb-2 mb-md-0">
+                  <div>
+                    <%= link_to '変更する', goal_path(goal.id), class: "btn" %>
+                  </div>
+                </div>
+              </div>
 
-<!-- Icons -->
-<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-<script>
-  feather.replace()
-</script>
+              <section class="text-center text-muted">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm-5 mb-5 mb-md-0">
+                      <div class="stat">
+                        <h3><%= goal.period %></h3>
+                        <p>いつまで</p>
+                      </div>
+                    </div>
+                    <div class="col-sm-3 mb-5 mb-md-0">
+                      <div class="stat">
+                        <h3><%= goal.saving_goal %><b>円</b></h3>
+                        <p>貯金金額</p>
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                      <div class="stat">
+                        <h3><%= goal.weight_goal %><b>kg</b></h3>
+                        <p>体重</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
 
-<!-- Graphs -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-<script>
-  var ctx = document.getElementById("myChart");
-  var myChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-      datasets: [{
-        data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-        lineTension: 0,
-        backgroundColor: 'transparent',
-        borderColor: '#007bff',
-        borderWidth: 4,
-        pointBackgroundColor: '#007bff'
-      }]
-    },
-    options: {
-      scales: {
-        yAxes: [{
-          ticks: {
-            beginAtZero: false
-          }
-        }]
-      },
-      legend: {
-        display: false,
-      }
-    }
-  });
-</script>
+            <% end %>
+            <%= column_chart @money.group_by_day(:created_at).sum(:saving_amount), xtitle: "日付", ytitle: "貯金額(円)" %>
+            <%= area_chart @bodies.group_by_day(:created_at).sum(:weight), xtitle: "日付", ytitle: "体重(KG)" %>
+            <% end %>
+          </div>
+        </main>
+      </div>
+    </div>
+
+    <!-- Icons -->
+    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+    <script>
+      feather.replace()
+    </script>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script>
-  window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery-slim.min.js"><\/script>')
-</script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script><script src="/docs/4.4/assets/js/vendor/anchor.min.js"></script>
-<script src="/docs/4.4/assets/js/vendor/clipboard.min.js"></script>
-<script src="/docs/4.4/assets/js/vendor/bs-custom-file-input.min.js"></script>
-<script src="/docs/4.4/assets/js/src/application.js"></script>
-<script src="/docs/4.4/assets/js/src/search.js"></script>
-<script src="/docs/4.4/assets/js/src/ie-emulation-modes-warning.js"></script>
+    <script>
+      window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery-slim.min.js"><\/script>')
+    </script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script><script src="/docs/4.4/assets/js/vendor/anchor.min.js"></script>
+    <script src="/docs/4.4/assets/js/vendor/clipboard.min.js"></script>
+    <script src="/docs/4.4/assets/js/vendor/bs-custom-file-input.min.js"></script>
+    <script src="/docs/4.4/assets/js/src/application.js"></script>
+    <script src="/docs/4.4/assets/js/src/search.js"></script>
+    <script src="/docs/4.4/assets/js/src/ie-emulation-modes-warning.js"></script>
   </body>
 </html>
